<resources>
    <string name="app_name">Lab3</string>
    <string name="name_age">Name &amp; Age</string>
    <string name="checkbox_date">Checkbox &amp; Date Field</string>
    <string name="radio_time_picker">Radio &amp; Time picker</string>
    <string name="rating_bar_time_picker">Rating Bar &amp; Time Picker</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="checkbox">Checkbox</string>
    <string name="checkbox1">Checkbox 1</string>
    <string name="checkbox2">Checkbox 2</string>
    <string name="checkbox3">Checkbox 3</string>
    <string name="date">Date Field</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="time">Time Picker</string>
    <string name="rate">Rating Bar</string>

    <string name="call">Call</string>
    <string name="alarm">Alarm</string>
    <string name="web_search">SISI</string>
</resources>
