<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/checkbox_date"
            android:textSize="24sp" />

    <CheckBox
            android:id="@+id/cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox1" />

    <CheckBox
            android:id="@+id/cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox2" />

    <CheckBox
            android:id="@+id/cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox3" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/date" />

    <DatePicker
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:ems="10"
            android:inputType="date" />

    <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

</LinearLayout>