<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingRight="25dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_span="2"
            android:text="@string/radio_time_picker"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rbSex"
            android:layout_width="178dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:text="@string/save" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:text="@string/cancel" />

    </TableRow>
</TableLayout>